Fixed z-index for dropdowns in popups

--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -5314,7 +5314,7 @@ div.token-input-dropdown {
   border: 1px solid $grey-b;
   border-top-width: 0;
   cursor: default;
-  z-index: 1;
+  z-index: 1001;
   padding: 0 3px;
 }
 
